--- a/index.html
+++ b/index.html
@@ -14,6 +14,135 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
+    <section class="top-banner">
+      <div class="top-banner-text">
+        <h1>Let's Help Those Who Are More In need</h1>
+        <p>
+          We should Help the People who are suffering from the sudden flood, and
+          we should care about this kind of situation
+        </p>
+        <a class="top-button" href="www.google.com">Donate Now</a>
+      </div>
+    </section>
+    <!-- First section end -->
+    <!-- 2nd section start -->
+    <section class="donate-today">
+      <div class="donate-td-text">
+        <h1>Donate Today</h1>
+        <p>
+          We should Help the People who are suffering from the sudden flood, and
+          <br />
+          we should care about this kind of situation
+        </p>
+      </div>
+      <div class="donate-amount">
+        <div class="donate-price">
+          <h2>100tk</h2>
+        </div>
+        <div class="donate-price">
+          <h2>200tk</h2>
+        </div>
+        <div class="donate-price" id="special">
+          <h2>300tk</h2>
+        </div>
+        <div class="donate-price">
+          <h2>400tk</h2>
+        </div>
+        <div class="donate-price">
+          <h2>500tk</h2>
+        </div>
+      </div>
+      <div class="donate-td-button">
+        <h4>other Amount</h4>
+        <hr />
+        <a class="top-button" href="www.google.com">Donate now</a>
+      </div>
+    </section>
+    <!-- end donate today -->
+    <section>
+      <div class="donate-td-text">
+        <h1>Our Donate Plan</h1>
+        <p>
+          We should Help the People who are suffering from the sudden flood, and
+          <br />
+          we should care about this kind of situation
+        </p>
+      </div>
+      <div class="d-plan">
+        <div class="f-plan plan">
+          <img src="icons/food.png" alt="" />
+          <h3>Food for family</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis,
+            dolorum! Lorem ipsum dolor sit amet.
+          </p>
+        </div>
+        <div class="e-plan plan">
+          <img src="icons/Frame-1.png" alt="" />
+          <h3>Education for family</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis,
+            dolorum! Lorem ipsum dolor sit amet.
+          </p>
+        </div>
+        <div class="s-plan plan">
+          <img src="icons/shelter.png" alt="" />
+          <h3>shelter for family</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis,
+            dolorum! Lorem ipsum dolor sit amet.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- End donate plan section -->
+    <section>
+      <div class="donate-td-text">
+        <h1>Our Activity</h1>
+        <p>
+          We should Help the People who are suffering from the sudden flood, and
+          <br />
+          we should care about this kind of situation
+        </p>
+      </div>
+      <div class="img-box">
+        <div class="dream">
+          <img src="images/donation0.jpg" alt="">
+          <img src="images/donation1.jpg" alt="">
+        </div>
+        <div class="dream">
+          <img src="images/donation10.jpg" alt="">
+          <img src="images/donation11.jpg" alt="">
+        </div>
+        <div class="dream">
+          <img src="images/donation13.jpg" alt="">
+          <img src="images/donation14.webp" alt="">
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="donate-td-text">
+        <h1>Get my updates</h1>
+        <p>
+          We should Help the People who are suffering from the sudden flood, and
+          <br />
+          we should care about this kind of situation
+        </p>
+      </div>
+      <div class="box">
+        <form action="#">
+          <div class="f-box">
+            <input type="text" placeholder="Email" />
+            <button type="submit">Subscribe</button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <section>
+      <footer class="ft-section">
+        <h2>Be humble</h2>
+        <p>I am gonna do it</p>
+      </footer>
+    </section>
   </body>
 </html>
