--- a/index.html
+++ b/index.html
@@ -107,16 +107,19 @@
       </div>
       <div class="img-box">
         <div class="dream">
-          <img src="images/donation0.jpg" alt="">
-          <img src="images/donation1.jpg" alt="">
+          <img src="images/donation0.jpg" alt="" />
+          <img src="images/donation1.jpg" alt="" />
+          <img src="images/donation2.jpg" alt="" />
         </div>
         <div class="dream">
-          <img src="images/donation10.jpg" alt="">
-          <img src="images/donation11.jpg" alt="">
+          <img src="images/donation9.jpg" alt="" />
+          <img src="images/donation1.jpg" alt="" />
+          <img src="images/donation2.jpg" alt="" />
         </div>
         <div class="dream">
-          <img src="images/donation13.jpg" alt="">
-          <img src="images/donation14.webp" alt="">
+          <img src="images/donation13.jpg" alt="" />
+          <img src="images/donation14.webp" alt="" />
+          <img src="images/donation6.jpg" alt="" />
         </div>
       </div>
     </section>
